--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "gree-hvac-mqtt-bridge",
+  "name": "gree-hvac-client",
   "version": "1.2.2",
-  "description": "MQTT Bridge for controlling Gree smart air conditioners",
-  "main": "index.js",
+  "description": "A client for controlling Gree smart air conditioners",
   "scripts": {
-    "test": "standard"
+    "test": "mocha",
+    "docs": "jsdoc2md -t README.hbs lib/*.js  > README.md; echo"
   },
   "keywords": [],
-  "author": "Arthur Krupa <arthurkrupa@users.noreply.github.com>",
+  "author": "Igor Starovierov <igor.decler@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "minimist": "^1.2.0",
-    "mqtt": "^2.15.0",
-    "pm2": "^3.5.0"
+    "clone": "^2.1.2",
+    "object-diff": "^0.0.4"
   },
   "engines": {
     "node": ">=8.11.0"
@@ -21,8 +20,12 @@
     "darwin",
     "linux"
   ],
-  "private": true,
   "devDependencies": {
-    "standard": "^12.0.1"
+    "jsdoc-to-markdown": "^5.0.0",
+    "mocha": "^6.1.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:inwaar/gree-hvac-client.git"
   }
 }
