--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "gree-hvac-client",
-  "version": "1.3.1",
+  "version": "0.0.0-development",
   "description": "A client for controlling Gree smart air conditioners",
   "scripts": {
     "lint": "eslint ./",
     "test": "mocha",
-    "docs": "jsdoc2md -t README.hbs lib/*.js  > README.md; echo"
+    "docs": "jsdoc2md -t README.hbs lib/*.js  > README.md; echo",
+    "semantic-release": "semantic-release"
   },
   "keywords": [],
   "author": "Igor Starovierov <igor.decler@gmail.com>",
@@ -23,7 +24,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jsdoc-to-markdown": "^5.0.3",
     "mocha": "^7.1.1",
-    "prettier": "^2.8.0"
+    "prettier": "^2.8.0",
+    "semantic-release": "^20.1.0"
   },
   "repository": {
     "type": "git",
