--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "object-diff": "^0.0.4"
   },
   "engines": {
-    "node": ">=8.11.0"
+    "node": ">=12.0.0"
   },
   "devDependencies": {
     "eslint": ">=8.27.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jsdoc-to-markdown": "^5.0.3",
-    "mocha": "^7.1.1",
+    "jsdoc-to-markdown": "8.0.0",
+    "mocha": "^10.2.0",
     "prettier": "^2.8.0",
     "semantic-release": "^20.1.0"
   },
