--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "jsdoc-to-markdown": "9.0.2",
     "mocha": "^10.2.0",
     "prettier": "^2.8.0",
-    "semantic-release": "^20.1.0"
+    "semantic-release": "^24.1.2"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:inwaar/gree-hvac-client.git"
+    "url": "git+https://github.com/inwaar/gree-hvac-client.git"
   }
 }
