--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [20.x]
+        node-version: [12, 14, 16, 18, 20, 22]
 
     steps:
       - uses: actions/checkout@v3
