--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,25 +4,22 @@ on:
   push:
     branches:
       - master
+      - ci
 
 jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
-          node-version: "20.x"
+          node-version: 20
           cache: "npm"
-      - name: Install dependencies
-        run: npm ci
-      - name: Release
+      - run: npm ci--dry-run
+      - run: npx semantic-release --dry-run
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npx semantic-release
