--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: 20
           cache: "npm"
       - run: npm ci
-      - run: npx semantic-release --dry-run
+      - run: npx semantic-release --dry-run --branches ci
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
