--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - master
-      - ci
 
 jobs:
   release:
@@ -19,7 +18,7 @@ jobs:
           node-version: 20
           cache: "npm"
       - run: npm ci
-      - run: npx semantic-release --dry-run --branches ci
+      - run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
