--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -5,8 +5,8 @@ on:
   push:
     branches:
       - ci
-    branches-ignore:
-      - master
+    # branches-ignore:
+    #   - master
 
 permissions:
   contents: read
