--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,4 +1,4 @@
-name: autofix
+name: docs
 on:
   workflow_call:
   pull_request:
@@ -9,7 +9,7 @@ on:
     #   - master
 
 jobs:
-  docs:
+  check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -18,4 +18,4 @@ jobs:
           node-version: 20
       - run: npm ci
       - run: npm run docs
-      - run: "git diff --exit-code README.md > /dev/null || echo fail: README.md is outdated, forget to run 'npm run docs'?"
+      - run: "git diff --exit-code README.md > /dev/null || (echo fail: README.md is outdated, forget to run 'npm run docs'? && false)"
