--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12, 14, 16, 18, 20, 22]
+        node-version: [14, 16, 18, 20, 22]
 
     steps:
       - uses: actions/checkout@v4
