--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-jsdoc": "^43.2.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.7.0",
+    "@types/jest": "^29.5.13",
     "jsdoc-to-markdown": "9.0.2",
     "prettier": "^2.8.0",
     "semantic-release": "^24.1.2"
