--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A client for controlling Gree smart air conditioners",
   "scripts": {
     "lint": "eslint ./",
-    "test": "mocha",
+    "test": "jest",
     "docs": "jsdoc2md -t README.hbs src/*.js  > README.md; echo",
     "semantic-release": "semantic-release"
   },
@@ -23,8 +23,9 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-jsdoc": "^43.2.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.7.0",
+    "@types/jest": "^29.5.13",
     "jsdoc-to-markdown": "9.0.2",
-    "mocha": "^10.2.0",
     "prettier": "^2.8.0",
     "semantic-release": "^24.1.2"
   },
