feat: enhance logging

--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   "license": "GPL-3.0",
   "dependencies": {
     "clone": "^2.1.2",
-    "object-diff": "^0.0.4"
+    "object-diff": "^0.0.4",
+    "winston": "^3.17.0"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=16.0.0"
   },
   "devDependencies": {
     "eslint": ">=8.27.0",
